# warsim_aslona

./: CMakeLists.txt  README.md  main.cpp
Cities/CityHub/: hub_events.cpp  hub_events.h
Cities/CityHub/Establishments/Tavern/: TavernInstance.cpp  TavernInstance.h
Cities/CityHub/Establishments/Tavern/TavernJobs/: Jobs.cpp  Jobs.h
Cities/CityHub/Events/StrangerEvent/: StrangerEvent.cpp  StrangerEvent.h
Entities/Enemy/: Enemy.cpp  Enemy.h
Entities/Inventory/: Inventory.cpp  Inventory.h
Entities/Item/: Item.cpp  Item.h
Entities/NPC/: NPCtemplate.cpp  NPCtemplate.h
Entities/NPC/HubNPC/: OldLady.cpp  OldLady.h
Entities/Player/: Player.cpp  Player.h
game_events/city_hub_events/: hub_events.cpp  hub_events.h
game_mechanics/: game_mechanics.cpp  game_mechanics.h  jobs.cpp  jobs.h
main_game_screen_text/: game_intro_text.txt
main_menu_text/: credits.txt  go_back.txt  main_menu.txt  settings.txt
main_menu_text/start_new_game/: choose_difficulty.txt
